--- a/IES_78323/Lab3/Lab3_1/src/main/resources/templates/index.html
+++ b/IES_78323/Lab3/Lab3_1/src/main/resources/templates/index.html
@@ -20,6 +20,7 @@ and open the template in the editor.
                             <tr>
                                 <th>Name</th>
                                 <th>Email</th>
+                                <th>Phone</th>
                                 <th>Edit</th>
                                 <th>Delete</th>
                             </tr>
@@ -28,6 +29,7 @@ and open the template in the editor.
                         <tr th:each="user : ${users}">
                             <td th:text="${user.name}"></td>
                             <td th:text="${user.email}"></td>
+                            <td th:text="${user.phone}"></td>
                             <td><a th:href="@{/edit/{id}(id=${user.id})}">Edit</a></td>
                             <td><a th:href="@{/delete/{id}(id=${user.id})}">Delete</a></td>
                         </tr>
