--- a/IES_78323/Lab3/Lab3_1/src/main/resources/templates/update-user.html
+++ b/IES_78323/Lab3/Lab3_1/src/main/resources/templates/update-user.html
@@ -18,6 +18,9 @@ and open the template in the editor.
             <label for="email">Email</label>
             <input type="text" th:field="*{email}" id="email" placeholder="Email">
             <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+            <label for="phone">Phone</label>
+            <input type="text" th:field="*{phone}" id="phone" placeholder="Phone">
+            <span th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></span>
             <input type="submit" value="Update User">   
         </form>
     </body>
